Feature/test coverage (#1)
* Configuring tests

* Configuring tests

* Configuring tests

* Configuring tests

* Setup Test Coverage

* Setup Test Coverage

* Setup Test Coverage

* Setup Test Coverage

* Setup Test Coverage

* Setup Test Coverage

* Setup Test Coverage

* Setup Test Coverage

* Setup Test Coverage

* Setup Test Coverage

* Remove duplicated code